# ai-summit-lab

./: 02_easy_sample.ipynb  02_sample.ipynb  README.md  easy_sample.ipynb  example2.ipynb  pyproject.toml
.ipynb_checkpoints/: 01_install_packages-checkpoint.ipynb  02_sample-checkpoint.ipynb
LLM/: 01_install_packages.ipynb  README.md
LLM/.ipynb_checkpoints/: 02_easy_sample-checkpoint.ipynb  IGNORE_ME-checkpoint.ipynb
serverless_framework_api/: main.py  start.sh  test_with_curl.sh
