[tool.poetry]
name = "ai-summit-lab"
version = "0.1.0"
description = ""
authors = ["Fu-Ming Tsai <sary357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
jupyterlab = "^4.3.0"
notebook = "^7.2.2"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
openai = "^1.54.3"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
